--- a/faq.html
+++ b/faq.html
@@ -19,35 +19,35 @@
     </header>
 
     <section class="content">
-        <h2>1. Why should I use my Lichess username to create an account?</h2>
-        <p>We require you to use your **Lichess.org username** so that we can verify your chess rating and provide you with personalized chess content.</p>
+        <h2>1. Do I need to use my Lichess.org username and password?</h2>
+        <p>Yes! You must **register using your existing Lichess.org username and password** to verify your chess rating and personalize your experience. Without this, registration is not possible.</p>
 
         <h2>2. Is LichessOnline affiliated with Lichess.org?</h2>
-        <p>No, LichessOnline.blogs is an independent platform that shares chess blogs, resources, and community discussions related to Lichess.org.</p>
+        <p>No, **LichessOnline.blogs is an independent blog website**. We provide chess blogs, community discussions, and resources related to Lichess.org, but we are not officially affiliated with them.</p>
 
-        <h2>3. How do I create an account?</h2>
-        <p>Click on the <a href="signup.html">Signup</a> button and enter your **Lichess username**, email, and password. If your username is already taken, choose another.</p>
+        <h2>3. Can I play chess games on LichessOnline?</h2>
+        <p>No, LichessOnline is **not a chess-playing platform**. It is a **blog and community website** where you can read chess content, join discussions, and learn strategies.</p>
 
-        <h2>4. Is my personal information safe?</h2>
-        <p>Yes! We prioritize **security and privacy**. Your data is stored securely and is never shared with third parties.</p>
+        <h2>4. What pages are restricted for non-registered users?</h2>
+        <p>Only registered users can access the **team page and blog page**. If you are not registered, you won’t be able to access them.</p>
 
-        <h2>5. Can I delete my account?</h2>
-        <p>Yes! You can delete your account anytime, and all your data will be erased from our system.</p>
+        <h2>5. How do I create an account?</h2>
+        <p>Click on the <a href="signup.html">Signup</a> button and enter your **Lichess username and password** along with your email. If your username is already taken, please use your real Lichess account.</p>
 
-        <h2>6. How can I improve at chess?</h2>
-        <p>We provide **top chess blogs, tutorials, and strategy guides** to help you improve. You can also check out our <a href="resources.html">Chess Resources</a> page.</p>
+        <h2>6. Is my personal information secure?</h2>
+        <p>Yes! We **do not share or misuse your data**. Your information is securely stored, and we prioritize privacy.</p>
 
-        <h2>7. Do you have a mobile app?</h2>
-        <p>Currently, we do not have an app, but our website is **fully mobile-friendly** for a smooth experience.</p>
+        <h2>7. How can I improve at chess using LichessOnline?</h2>
+        <p>We provide **high-quality blogs, tutorials, and guides** to help you improve. Check our <a href="resources.html">Chess Resources</a> page for expert advice.</p>
 
-        <h2>8. Can I submit my own chess blog?</h2>
-        <p>Yes! If you're a chess enthusiast, you can submit your chess articles. Contact us at <a href="contact.html">our email</a> for details.</p>
+        <h2>8. Can I submit my own chess blogs?</h2>
+        <p>Yes! If you’re a chess enthusiast, you can share your knowledge. Contact us at <a href="contact.html">our email</a> to submit your article.</p>
 
-        <h2>9. Is LichessOnline free to use?</h2>
-        <p>Yes! Our website is **completely free**, just like Lichess.org.</p>
+        <h2>9. Is LichessOnline free?</h2>
+        <p>Yes! Just like Lichess.org, LichessOnline is **completely free** to use.</p>
 
         <h2>10. I forgot my password. How can I reset it?</h2>
-        <p>If you forget your password, click on **Forgot Password** on the login page. A password reset link will be sent to your email.</p>
+        <p>If you forget your password, it can't be recover.</p>
     </section>
 
     <!-- Footer -->
