--- a/terms.html
+++ b/terms.html
@@ -14,25 +14,40 @@
 
     <section class="content">
         <h2>1. Introduction</h2>
-        <p>Welcome to LichessOnline. By accessing and using our platform, you agree to comply with and be bound by the following Terms of Service. If you do not agree with any part of these terms, please do not use our services.</p>
+        <p>Welcome to **LichessOnline**. This website is built **only for viewing blogs and joining top Lichess teams**. By accessing and using our platform, you agree to comply with these Terms of Service.</p>
 
-        <h2>2. Account Registration</h2>
-        <p>To use certain features, you must create an account. You are responsible for maintaining the confidentiality of your account credentials and for all activities under your account.</p>
+        <h2>2. No Chess Games Can Be Played</h2>
+        <p>LichessOnline is **not a chess-playing platform**. Users cannot play real chess games here. It is a **blog and discussion platform** related to Lichess.org.</p>
 
-        <h2>3. Acceptable Use</h2>
-        <p>Users must use LichessOnline in a lawful and respectful manner. Any misuse, including hacking, spamming, or harassment, will result in account termination.</p>
+        <h2>3. Account Registration</h2>
+        <p>To access certain features, users must **register using their real Lichess.org username and password**. Fake usernames will not be accepted.</p>
 
-        <h2>4. Privacy & Data Protection</h2>
-        <p>We respect your privacy and collect only necessary data to improve our services. Your information will never be sold to third parties. Read our <a href="privacy.html">Privacy Policy</a> for more details.</p>
+        <h2>4. Use of Personal Information</h2>
+        <p>We **only collect necessary data** to improve the user experience. We **never sell or misuse your data**. Read our <a href="privacy.html">Privacy Policy</a> for more details.</p>
 
-        <h2>5. Account Termination</h2>
-        <p>We reserve the right to suspend or delete accounts that violate our policies. Users can also delete their accounts at any time via the "Delete Account" option.</p>
+        <h2>5. Data Security</h2>
+        <p>We handle your data **with the highest security standards**. Your personal information is stored safely and **not shared with any third parties**.</p>
 
-        <h2>6. Changes to Terms</h2>
-        <p>We may update these Terms of Service from time to time. Continued use of the platform after modifications implies acceptance of the revised terms.</p>
+        <h2>6. Acceptable Use</h2>
+        <p>Users must use LichessOnline **in a lawful and respectful manner**. Activities such as hacking, spamming, or harassment will result in account termination.</p>
 
-        <h2>7. Contact Information</h2>
-        <p>If you have any questions about these Terms of Service, please contact us at <strong>support@lichessonline.com</strong>.</p>
+        <h2>7. Restricted Access for Non-Registered Users</h2>
+        <p>Non-registered users **cannot access the team page or blog page**. Registration is required to use these features.</p>
+
+        <h2>8. Account Termination</h2>
+        <p>We reserve the right to suspend or delete accounts that violate our policies. Users can also **delete their accounts anytime** via the "Delete Account" option.</p>
+
+        <h2>9. Changes to Terms</h2>
+        <p>We may update these **Terms of Service** from time to time. Continued use of the platform after modifications implies acceptance of the revised terms.</p>
+
+        <h2>10. No Affiliation with Lichess.org</h2>
+        <p>LichessOnline is **not affiliated with Lichess.org**. We are an **independent blog website** dedicated to sharing chess content and resources.</p>
+
+        <h2>11. Purpose of the Website</h2>
+        <p>This website is **strictly for viewing chess blogs, discussions, and joining Lichess teams**. Users should not expect gaming features.</p>
+
+        <h2>12. Contact Information</h2>
+        <p>If you have any questions about these **Terms of Service**, please contact us at <strong>support@lichessonline.com</strong>.</p>
 
         <p><small>© 2025 LichessOnline. All Rights Reserved.</small></p>
     </section>
