--- a/index.html
+++ b/index.html
@@ -10,76 +10,88 @@
 <body>
 
     <!-- Navigation Bar -->
-    <nav>
-        <a href="index.html" class="logo">LichessOnline</a>
-        <span id="userStatus"></span> 
-        <a href="about.html">About Us</a>
-        <a href="blogs.html">Featured Blogs</a>
-        <a href="terms.html">Terms</a>
-        <a href="privacy.html">Privacy</a>
-        <a href="contact.html">Contact</a>
-        <a href="faq.html">FAQ</a>
-        <a href="resources.html">Learning Resources</a>
-        <a href="teams.html">Top Teams</a>
-        <a href="notes.html">Notes Taker</a>
+    <nav class="navbar">
+        <div class="logo"><a href="index.html">LichessOnline</a></div>
+        <ul class="nav-links">
+            <li><a href="about.html">About</a></li>
+            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="resources.html">Learning</a></li>
+            <li><a href="teams.html">Top Teams</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="terms.html">Terms</a></li>
+            <li><a href="privacy.html">Privacy</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <button class="cta-button"><a href="signup.html">Join Now</a></button>
     </nav>
 
-    <!-- Main Content -->
-    <header>
-        <h1>LichessOnline Chess Blog Platform</h1>
-        <p>Curating the internet's most valuable chess content - featuring only top-rated blogs, tutorials, and game analyses from the chess community.</p>
+    <!-- Hero Section -->
+    <header class="hero">
+        <h1>Master Chess with Expert Insights</h1>
+        <p>Curating the internet's most valuable chess content—top-rated blogs, game analyses, and structured learning resources.</p>
+        <a href="signup.html" class="cta-button">Get Free Chess Insights</a>
     </header>
 
+    <!-- Main Content -->
     <section class="content">
-        <h2>About Our Chess Blog Platform</h2>
-        <p><strong>LichessOnline</strong> is not a gaming platform, but rather a specialized chess education hub where we:</p>
+        <h2>About LichessOnline</h2>
+        <p><strong>LichessOnline</strong> is a chess education platform where we:</p>
         <ul>
-            <li>Aggregate and showcase the most insightful chess blogs from around the web</li>
+            <li>Showcase the most insightful chess blogs from top players</li>
             <li>Feature in-depth game analyses from master-level players</li>
-            <li>Provide structured learning pathways for chess improvement</li>
+            <li>Provide structured learning paths for every skill level</li>
             <li>Highlight trending chess strategies and opening innovations</li>
         </ul>
+    </section>
 
-        <div class="features">
-            <div class="feature">
-                <h3>✔ Expert-Curated Content</h3>
-                <p>Every blog post undergoes review by our chess experts to ensure only high-quality, educational content makes it to our platform. We filter out noise so you get straight to valuable insights.</p>
-            </div>
+    <!-- Features Section -->
+    <section class="features">
+        <div class="feature">
+            <h3>✔ Expert-Curated Content</h3>
+            <p>We review all blogs to ensure high-quality, educational content. No spam, just valuable insights.</p>
+        </div>
 
-            <div class="feature">
-                <h3>✔ Community-Ranked Articles</h3>
-                <p>Our ranking system surfaces the most helpful content based on actual user engagement and chess improvement results. The best content rises to the top.</p>
-            </div>
+        <div class="feature">
+            <h3>✔ Community-Ranked Articles</h3>
+            <p>Our ranking system highlights the most useful blogs based on real chess improvement results.</p>
+        </div>
 
-            <div class="feature">
-                <h3>✔ Structured Learning Paths</h3>
-                <p>Blogs are organized by skill level (beginner, intermediate, advanced) and topic (openings, endgames, tactics) so you can systematically improve your game.</p>
-            </div>
+        <div class="feature">
+            <h3>✔ Structured Learning Paths</h3>
+            <p>Blogs are organized by skill level (beginner, intermediate, advanced) and topic (openings, endgames, tactics).</p>
+        </div>
+    </section>
 
+    <!-- Content Selection Process -->
+    <section class="content">
         <h2>Our Content Selection Process</h2>
-        <p>We maintain strict quality standards for featured content:</p>
         <ol>
-            <li><strong>Originality Check:</strong> All submissions must provide unique insights not found elsewhere</li>
-            <li><strong>Practical Value:</strong> Content must demonstrate clear application to real games</li>
-            <li><strong>Accuracy Review:</strong> All chess analysis is verified for correctness</li>
-            <li><strong>Community Feedback:</strong> We prioritize content with proven positive user feedback</li>
+            <li><strong>Originality Check:</strong> Blogs must provide unique insights.</li>
+            <li><strong>Practical Value:</strong> Content must demonstrate real-game application.</li>
+            <li><strong>Accuracy Review:</strong> Expert analysis ensures correctness.</li>
+            <li><strong>Community Feedback:</strong> We prioritize content with high positive engagement.</li>
         </ol>
+    </section>
 
+    <!-- Join Section -->
+    <section class="join">
         <h2>Join Our Chess Learning Community</h2>
-        <p>While we don't host games, we connect you with the best educational content and like-minded chess learners:</p>
+        <p>Stay updated with top chess blogs, master-level analysis, and exclusive learning resources.</p>
         <ul>
-            <li>Weekly digest of top new chess blogs</li>
-            <li>Exclusive master-level analysis content</li>
-            <li>Priority access to our Lichess study groups</li>
+            <li>Weekly digest of top chess blogs</li>
+            <li>Exclusive master-level analysis</li>
+            <li>Access to our Lichess study groups</li>
         </ul>
-        <a href="signup.html" class="cta-button">Get Free Chess Insights</a>
+        <a href="signup.html" class="cta-button">Start Learning Now</a>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 LichessOnline Blog Platform. All rights reserved.</p>
-        <p>Disclaimer: LichessOnline is an independent blog aggregator and is not affiliated with lichess.org.</p>
+        <p>&copy; 2025 LichessOnline. All rights reserved.</p>
+        <p>Disclaimer: LichessOnline is an independent chess blog aggregator and is not affiliated with lichess.org.</p>
     </footer>
+
 </body>
 </html>
 
