--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LichessOnline - Premier Chess Blog & Analysis Platform</title>
-    <link rel="stylesheet" href="style.css"> 
-    <meta name="description" content="LichessOnline features top-rated chess blogs, game analysis, and educational resources for chess enthusiasts of all levels.">
+    <title>LichessOnline - Chess Blogs & Analysis</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -16,80 +15,49 @@
             <li><a href="about.html">About</a></li>
             <li><a href="blogs.html">Blogs</a></li>
             <li><a href="resources.html">Learning</a></li>
-            <li><a href="teams.html">Top Teams</a></li>
+            <li><a href="teams.html">Teams</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li><a href="faq.html">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="terms.html">Terms</a></li>
             <li><a href="privacy.html">Privacy</a></li>
-            <li><a href="contact.html">Contact</a></li>
         </ul>
-        <button class="cta-button"><a href="signup.html">Join Now</a></button>
+        <a href="signup.html" class="cta-button">Join Now</a>
     </nav>
 
     <!-- Hero Section -->
     <header class="hero">
-        <h1>Master Chess with Expert Insights</h1>
-        <p>Curating the internet's most valuable chess content—top-rated blogs, game analyses, and structured learning resources.</p>
-        <a href="signup.html" class="cta-button">Get Free Chess Insights</a>
+        <h1>Improve Your Chess Skills</h1>
+        <p>Top blogs, game analysis, and expert strategies.</p>
+        <a href="signup.html" class="cta-button">Start Learning</a>
     </header>
-
-    <!-- Main Content -->
-    <section class="content">
-        <h2>About LichessOnline</h2>
-        <p><strong>LichessOnline</strong> is a chess education platform where we:</p>
-        <ul>
-            <li>Showcase the most insightful chess blogs from top players</li>
-            <li>Feature in-depth game analyses from master-level players</li>
-            <li>Provide structured learning paths for every skill level</li>
-            <li>Highlight trending chess strategies and opening innovations</li>
-        </ul>
-    </section>
 
     <!-- Features Section -->
     <section class="features">
         <div class="feature">
-            <h3>✔ Expert-Curated Content</h3>
-            <p>We review all blogs to ensure high-quality, educational content. No spam, just valuable insights.</p>
+            <h3>✔ Expert Insights</h3>
+            <p>Curated content from top players.</p>
         </div>
-
         <div class="feature">
-            <h3>✔ Community-Ranked Articles</h3>
-            <p>Our ranking system highlights the most useful blogs based on real chess improvement results.</p>
+            <h3>✔ Community Favorites</h3>
+            <p>Best blogs ranked by players.</p>
         </div>
-
         <div class="feature">
-            <h3>✔ Structured Learning Paths</h3>
-            <p>Blogs are organized by skill level (beginner, intermediate, advanced) and topic (openings, endgames, tactics).</p>
+            <h3>✔ Learn Effectively</h3>
+            <p>Create your own personal notes.</p>
         </div>
-    </section>
-
-    <!-- Content Selection Process -->
-    <section class="content">
-        <h2>Our Content Selection Process</h2>
-        <ol>
-            <li><strong>Originality Check:</strong> Blogs must provide unique insights.</li>
-            <li><strong>Practical Value:</strong> Content must demonstrate real-game application.</li>
-            <li><strong>Accuracy Review:</strong> Expert analysis ensures correctness.</li>
-            <li><strong>Community Feedback:</strong> We prioritize content with high positive engagement.</li>
-        </ol>
     </section>
 
     <!-- Join Section -->
     <section class="join">
-        <h2>Join Our Chess Learning Community</h2>
-        <p>Stay updated with top chess blogs, master-level analysis, and exclusive learning resources.</p>
-        <ul>
-            <li>Weekly digest of top chess blogs</li>
-            <li>Exclusive master-level analysis</li>
-            <li>Access to our Lichess study groups</li>
-        </ul>
-        <a href="signup.html" class="cta-button">Start Learning Now</a>
+        <h2>Join the Community</h2>
+        <p>Get weekly chess insights & exclusive content.</p>
+        <a href="signup.html" class="cta-button">Sign Up Free</a>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 LichessOnline. All rights reserved.</p>
-        <p>Disclaimer: LichessOnline is an independent chess blog aggregator and is not affiliated with lichess.org.</p>
+        <p>&copy; 2025 LichessOnline. Not affiliated with Lichess.org.</p>
     </footer>
 
 </body>
