--- a/index.html
+++ b/index.html
@@ -8,57 +8,65 @@
 </head>
 <body>
 
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <div class="logo"><a href="index.html">LichessOnline</a></div>
-        <ul class="nav-links">
-            <li><a href="about.html">About</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
-            <li><a href="resources.html">Learning</a></li>
-            <li><a href="teams.html">Teams</a></li>
-            <li><a href="notes.html">Notes</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="terms.html">Terms</a></li>
-            <li><a href="privacy.html">Privacy</a></li>
-        </ul>
-        <a href="signup.html" class="cta-button">Join Now</a>
-    </nav>
+<!-- Sidebar Navigation -->
+<aside class="sidebar">
+    <div class="logo"><a href="index.html">LichessOnline</a></div>
+    <ul class="nav-links">
+        <li><a href="resources.html">♟ Learning</a></li>
+        <li><a href="blogs.html">📝 Blogs</a></li>
+        <li><a href="teams.html">🏆 Teams</a></li>
+        <li><a href="notes.html">📖 Notes</a></li>
+        <li><a href="faq.html">❓ FAQ</a></li>
+        <li><a href="about.html">📌 About</a></li>
+        <li><a href="contact.html">📩 Contact</a></li>
+        <li><a href="terms.html">🫂 Terms</a></li>
+        <li><a href="privacy.html">🔑Privacy</a></li>
+    </ul>
+    <a href="signup.html" class="cta-button">Join Now</a>
+</aside>
 
-    <!-- Hero Section -->
-    <header class="hero">
-        <h1>Improve Your Chess Skills</h1>
-        <p>Top blogs, game analysis, and expert strategies.</p>
-        <a href="signup.html" class="cta-button">Start Learning</a>
-    </header>
+<!-- Main Content -->
+<main class="content">
+    <!-- Description Section -->
+    <section class="description">
+        <h2>Welcome to LichessOnline</h2>
+        <p>Your ultimate destination for chess blogs, expert analysis, and structured lessons.</p>
+        <p>Join a passionate community of players who share their experiences, strategies, and learning resources.</p>
+        <p>Whether you're a beginner or a seasoned player, we offer content tailored to every skill level.</p>
+    </section>
 
     <!-- Features Section -->
     <section class="features">
         <div class="feature">
-            <h3>✔ Expert Insights</h3>
-            <p>Curated content from top players.</p>
+            <h3>✔ Expert Game Analysis</h3>
+            <p>Learn from detailed breakdowns of high-level games with deep insights into openings, tactics, and endgames.</p>
         </div>
         <div class="feature">
-            <h3>✔ Community Favorites</h3>
-            <p>Best blogs ranked by players.</p>
+            <h3>✔ Community-Driven Content</h3>
+            <p>Read top-rated blogs, engage in lively discussions, and connect with chess enthusiasts worldwide.</p>
         </div>
         <div class="feature">
-            <h3>✔ Learn Effectively</h3>
-            <p>Create your own personal notes.</p>
+            <h3>✔ Structured Learning</h3>
+            <p>Access interactive lessons, video tutorials, and personalized courses designed to enhance your game.</p>
+        </div>
+        <div class="feature">
+            <h3>✔ Chess Teams & Tournaments</h3>
+            <p>Join online teams, participate in competitions, and challenge players of different skill levels.</p>
         </div>
     </section>
 
     <!-- Join Section -->
     <section class="join">
-        <h2>Join the Community</h2>
-        <p>Get weekly chess insights & exclusive content.</p>
+        <h2>Join the Chess Community</h2>
+        <p>Gain access to exclusive content, participate in engaging discussions, and improve your game with expert insights.</p>
         <a href="signup.html" class="cta-button">Sign Up Free</a>
     </section>
+</main>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 LichessOnline. Not affiliated with Lichess.org.</p>
-    </footer>
+<!-- Footer -->
+<footer>
+    <p>&copy; 2025 LichessOnline. Not affiliated with Lichess.org.</p>
+</footer>
 
 </body>
 </html>
